--- a/bankist-website/index.html
+++ b/bankist-website/index.html
@@ -10,12 +10,15 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
+
+    <script defer src="script.js"></script>
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
-            <img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" />
+            <img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" designer="Jonas"
+                data-version-number="3.0" />
             <ul class="nav__links">
                 <li class="nav__item">
                     <a class="nav__link" href="#section--1">Features</a>
@@ -314,7 +317,6 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
